# dagensquiz

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  captain-definition  generate.py  requirements.txt  run.py  rust-toolchain.toml
2018/en/: capitals.txt  data.json  elements.txt  entertainment.txt  games.txt  general.txt  geography.txt  science.txt
2018/no/: data.json  generelt.txt  geografi.txt  grunnstoff.txt  historie.txt  naturvitenskap.txt  spill.txt  underholdning.txt
quiz/en/: entertainment.txt  games.txt  geography.txt  history.txt
quiz/no/: historie.txt  hovedstader.txt  spill.txt  sport.txt
quiz_server/: __main__.py  main.py  quiz.py  randomish.py
quiz_server/templates/: index.html
src/: main.rs  quiz.rs  randomish.rs
templates/: index.hbs
words/: animals.txt
