[package]
name = "dagensquiz"
version = "0.1.0"
authors = ["Ole Herman Schumacher Elgesem <oleherman93@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
chrono = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "tera_templates"]
