[package]
name = "dagensquiz"
version = "0.2.1"
authors = ["Ole Herman Schumacher Elgesem <oleherman93@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
chrono = "0.4.38"
rust-crypto = "^0.2"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["handlebars_templates"]
